--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: unless-stopped
     volumes:
       - .:/var/www
+      - /var/run/php:/var/run/php
     networks:
       - laravel_network
 
@@ -21,6 +22,7 @@ services:
       - .:/var/www
       - /root/laravel-socket-app/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - /root/laravel-socket-app/nginx/fastcgi-php.conf:/etc/nginx/snippets/fastcgi-php.conf
+      - /var/run/php:/var/run/php
     networks:
       - laravel_network
 
