--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,11 +18,18 @@ server {
     #}
 
     location ~ \.php$ {
-	include /etc/nginx/snippets/fastcgi-php.conf;  # Include all FastCGI settings from this snippet
-	fastcgi_pass unix:/var/run/php/php8.0-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php8.0-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
+
+
+    #location ~ \.php$ {
+    #	include /etc/nginx/snippets/fastcgi-php.conf;  # Include all FastCGI settings from this snippet
+	#fastcgi_pass unix:/var/run/php/php8.0-fpm.sock;
+    #	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #        include fastcgi_params;
+    #    }
 
     location ~ /\.ht {
         deny all;
